# qrcode-boardgames-nft-rs

./: .gitignore  Cargo.toml  readme.md
src/: main.rs  structs.rs
