[package]
name = "qrcode-boardgames-nft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode-generator = "4.1.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1", features = ["full"] }
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
html-escape = "0.2.13"
